<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HubActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="309dp"
        android:layout_height="63dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="107dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Name_Remainder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/Date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="382dp"
        android:text="@string/Location_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_date"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>